# kws_cc

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build.sh  env.sh  format_style.sh
hexagon/: CMakeLists.txt  build.sh
hexagon/inc/: speech_backend.idl
hexagon/src/: conv2d.cpp  host.cpp
inc/: utils.hpp
inc/models/: crn_model.hpp  kws_model.hpp
inc/modules/: speech_conv.hpp  speech_deconv.hpp
inc/ops/: batchnorm2d.hpp  conv2d.hpp  conv2d_t.hpp  lstm.hpp
src/: crn_test.cc  kws_test.cc
src/inc/: kws_model.h  speech_conv.h  speech_deconv.h  utils.h  utils.hpp
src/inc/models/: kws_model.hpp
src/inc/modules/: speech_conv.hpp  speech_deconv.hpp
src/inc/ops/: batchnorm2d.hpp  conv2d.hpp  conv2d_t.hpp  lstm.hpp
src/models/: kws.cc
src/py/: conv2d.py  model.py
src/utils/: utils.cc
test/: hello_eigen.cc  template_class_test.cc  template_matrix_test.cc
test/ops/: conv2d_test.cc  conv2d_test.py  im2col.py
test/ops/conv2d/: conv2d_test.cc  conv2d_test.py
tools/: dump_onnx.py  dump_pkl.py
